Regression: Context Path in the node editors is broken #111983

Closed
opened 2023-09-05 16:36:15 +02:00 by Dalai Felinto · 2 comments

Blender Version
Broken: version: 4.0.0 Alpha fa34992def
Worked: version: 4.0.0 Alpha fa34992def ^

Caused by: fa34992def

Short description of error

Context Path in the node editors is missing information.

Exact steps for others to reproduce the error
context_path_nodes.blend

Expected:

image

Current behaviour:

image

Note the issue also happens for the Shading Editor and the Compositor.

**Blender Version** Broken: version: 4.0.0 Alpha fa34992def0a Worked: version: 4.0.0 Alpha fa34992def0a ^ Caused by: fa34992def0a16 **Short description of error** Context Path in the node editors is missing information. **Exact steps for others to reproduce the error** [context_path_nodes.blend](/attachments/a5d520f6-8489-4b6e-8ed0-1751ab001ad8) **Expected:** ![image](/attachments/f6b16331-7578-4b48-8209-018e096efc80) **Current behaviour:** ![image](/attachments/b4aee42d-c86c-4bb1-aed3-b24b18116563) Note the issue also happens for the Shading Editor and the Compositor.

I'll bisect...

I'll bisect...
Hans Goudey was assigned by Dalai Felinto 2023-09-05 18:06:06 +02:00
Member
@HooglyBoogly : fix in !112020
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-06 13:51:42 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111983
No description provided.