Fix #111983 : Context Path in the node editors is broken

Mistake in fa34992def0a16 (reversed conditional).

Pull Request: https://projects.blender.org/blender/blender/pulls/112020